51 Configure Kafka Consumer Using Spring Boot Profiles

--- a/library-events-consumer/src/main/resources/application.yml
+++ b/library-events-consumer/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 server:
   error:
     include-message: always
+  port: 8081
 
 spring:
   profiles:
@@ -10,6 +11,33 @@ spring:
 spring:
   profiles: local
   kafka:
+    consumer:
+      bootstrap-servers: localhost:9092,localhost:9093,localhost:9094
+      key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      group-id: library-events-listener-group
+
+---
+spring:
+  profiles: nonprod
+  kafka:
     template:
       default-topic: library-events
+    consumer:
+      bootstrap-servers: localhost:9092,localhost:9093,localhost:9094
+      key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      group-id: library-events-listener-group
+
+---
+spring:
+  profiles: prod
+  kafka:
+    template:
+      default-topic: library-events
+    consumer:
+      bootstrap-servers: localhost:9092,localhost:9093,localhost:9094
+      key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      group-id: library-events-listener-group
 
