--- a/library-events-consumer/src/main/resources/application.yml
+++ b/library-events-consumer/src/main/resources/application.yml
@@ -16,6 +16,8 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       group-id: library-events-listener-group
+      enable-auto-commit: false
+
 
 ---
 spring:
