--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <modules>
         <module>library-events-producer</module>
         <module>library-events-consumer</module>
+        <module>library-events-data</module>
     </modules>
 
     <parent>
