80 Two Way Authentication - Client And Server Authentication

--- a/server_properties/client-ssl.properties
+++ b/server_properties/client-ssl.properties
@@ -2,3 +2,8 @@ security.protocol=SSL
 ssl.truststore.location=D:/Art/IdeaProjects/Study/Dilip/KafkaSpringBoot/ssl/client.truststore.jks
 ssl.truststore.password=artpassword
 ssl.truststore.type=JKS
+
+ssl.keystore.type=JKS
+ssl.keystore.location=D:/Art/IdeaProjects/Study/Dilip/KafkaSpringBoot/ssl/client.keystore.jks
+ssl.keystore.password=artpassword
+ssl.key.password=artpassword
