--- a/server_properties/server-1.properties
+++ b/server_properties/server-1.properties
@@ -36,6 +36,10 @@ ssl.keystore.password=artpassword
 ssl.key.password=artpassword
 ssl.endpoint.identification.algorithm=
 
+ssl.truststore.location=D:/Art/IdeaProjects/Study/Dilip/KafkaSpringBoot/ssl/server.truststore.jks
+ssl.truststore.password=artpassword
+ssl.client.auth=required
+
 # Hostname and port the broker will advertise to producers and consumers. If not set, 
 # it uses the value for "listeners" if configured.  Otherwise, it will use the value
 # returned from java.net.InetAddress.getCanonicalHostName().
